<resources>
    <string name="app_name">X-Trane</string>
    <string name="participant">Participant</string>
    <string name="coach">Coach</string>
    <string name="participant_login">Participant Login</string>
    <string name="child_login">Child Login</string>
    <string name="adult_login">Adult Login</string>

    <string name="type_to_search">Type to Search</string>
    <string name="string_item_name">Item Name</string>
    <string name="not_found">Not Found!</string>

    <string name="Google_API_key">AIzaSyDZz4wntacjlvQ3aEGb9eWpDPU6M71t_Vc</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="write">Write Here</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="coach_register">COACH REGISTER</string>
    <string name="participant_register">PARTICIPANT REGISTER</string>
    <string name="adult_register">ADULT REGISTER</string>
    <string name="wallet">Wallet</string>

    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_please">Already have an account please</string>
    <string name="phone_verification">Phone verification</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="verification">VERIFICATION</string>
    <string name="select_sports">SELECT SPORTS</string>
    <string name="email_verification">Email verification</string>
    <string name="finish">Finish</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phillies_national">Phillies at Nationals</string>
    <string name="fifa_international_match">FIFA International Match</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="type">Type</string>
    <string name="parent">Parent</string>
    <string name="adult">Adult</string>
    <string name="coach_login">Coach Login</string>
    <string name="child_name">Child Name</string>
    <string name="american_football">American Football</string>
    <string name="add_another_child">Add Another Child</string>
    <string name="_30_sept_2021">03 Sept, 2021</string>
    <string name="_07_sept_2021">07 Sept, 2021</string>
    <string name="home">Home</string>
    <string name="match">Match</string>
    <string name="match1">MATCH</string>
    <string name="event_detail">EVENT DETAIL</string>
    <string name="participants">PARTICIPANTS</string>
    <string name="participants1">Participants</string>
    <string name="parent_book">PARENT BOOK</string>
    <string name="venue1">VENUE</string>
    <string name="about1">ABOUT</string>
    <string name="teams1">TEAMS</string>
    <string name="match_list">MATCH LIST</string>
    <string name="all_coaches">ALL COACHES</string>
    <string name="coaches_detail">COACHES DETAIL</string>
    <string name="team_detail">TEAM DETAIL</string>
    <string name="book">BOOK</string>
    <string name="book1">Book</string>
    <string name="all_coaches1">All Coaches</string>
    <string name="coaches">Coaches</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="change_pwd">CHANGE PASSWORD</string>
    <string name="txt_notifications">NOTIFICATIONS</string>
    <string name="send_request_parent">Request to Parent</string>

    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_profile_personal">EDIT PROFILE PERSONAL</string>
    <string name="coach_profile">COACH PROFILE</string>
    <string name="child">Child</string>
    <string name="submit">Submit</string>
    <string name="personal">Personal</string>
    <string name="dd_mm_yyyy1">DD/MM/YYYY</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_child">Add Child</string>
    <string name="add_child1">ADD CHILD</string>
    <string name="edit_child1">EDIT CHILD</string>
    <string name="add">Add</string>
    <string name="join_team">Join Team</string>
    <string name="david_m_garcia">David M. Garcia</string>
    <string name="sport_type">Sport Type</string>
    <string name="brian_m_bettencourt">Brian M. Bettencourt</string>
    <string name="davidgarcia_gmail_com">davidgarcia@gmail.com</string>
    <string name="_270_40_xxxx">270–40-XXXX</string>
    <string name="soccer">Soccer</string>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="lorem_text">Lorem ipsum text is a scrambled version of a passage in classical Latin derived from the Marcus Tullius Cicero\'s treatise on ethics, De Finibus Bonorum et. Lorem ipsum text is a scrambled version of a passage in classical Latin derived from the Marcus Tullius Cicero\'s treatise on ethics, De Finibus Bonorum et. Lorem ipsum text is a scrambled version of a passage in classical Latin derived from the Marcus Tullius Cicero\'s treatise on ethics, De Finibus Bonorum et.</string>
    <string name="teams">Teams</string>
    <string name="united_states_men_s_nationalbasketball">United States men\'s nationalbasketball</string>
    <string name="basketball">Basketball</string>
    <string name="team_name">Team Name</string>
    <string name="coach_name">Coach Name</string>
    <string name="fees">Fees</string>
    <string name="_20_00">$20.00</string>
    <string name="per_month">Per Month</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="signature">Signature</string>
    <string name="join">Join</string>
    <string name="about">About</string>
    <string name="venue">Venue</string>
    <string name="team">Team</string>
    <string name="team1">TEAM</string>
    <string name="add_event">ADD EVENT</string>
    <string name="result">Result</string>
    <string name="united_states_men_s_national_basketball">United States men\'s national basketball</string>
    <string name="inter_miami_cf">Inter Miami CF</string>
    <string name="vs">VS</string>
    <string name="team_a">Team A</string>
    <string name="team_member_name">Team Member Name</string>
    <string name="team_b">Team B</string>
    <string name="derrick_n_laffey">Derrick N. Laffey</string>
    <string name="mauris_consequat_sem_sed">Mauris consequat sem sed</string>
    <string name="_10_participants">10 Participants</string>
    <string name="male_female">Male / Female</string>
    <string name="_3726_bryan_avenue_prior_lake_mn_55372">3726 Bryan Avenue Prior Lake, MN 55372</string>
    <string name="select_child">Select Child</string>
    <string name="name">Name</string>
    <string name="member_ship_expire">Member Ship Expire</string>
    <string name="_24_sep_2022">24 Sep, 2022</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="team_members_name">Team Members Name</string>
    <string name="create_team">Create Team</string>
    <string name="create_team1">CREATE TEAM</string>
    <string name="select_participants">Select Participants</string>
    <string name="create_league">CREATE LEAGUE</string>
    <string name="add_match">Add Match</string>
    <string name="add_match1">ADD MATCH</string>
    <string name="date">Date</string>
    <string name="selectdate">Select start Date</string>
    <string name="selectenddate">Select End Date</string>
    <string name="select_team_a">Select Team A</string>
    <string name="select_team">Select Team</string>
    <string name="select_team_b">Select Team B</string>
    <string name="time">Time</string>
    <string name="_00_00">00:00</string>
    <string name="sports_type">Sports Type</string>
    <string name="no_of_participants">No. Of Participants</string>
    <string name="child_group">Child Group</string>
    <string name="location">Location</string>
    <string name="aspen_colorado_usa">Aspen, Colorado, USA</string>
    <string name="_150_participants">150 Participants</string>
    <string name="waiting_participants">Waiting Participants</string>
    <string name="spors">Sports</string>
    <string name="otp">otp</string>
    <string name="sports">Sports</string>
    <string name="select_child_group">Select child group</string>
    <string name="_10_20_age">10 - 20 Age</string>
    <string name="loading">Loading...</string>

    <string name="selected_item">Selected item:</string>
    <string name="hint_resource">Select Sports</string>
    <string name="SelectLocation">Select Location</string>
    <string name="SelectRadius">Select Radius</string>
    <string name="Apply">Apply</string>
    <string name="Please_Select_sports_or_Location">Please Select sports or Location</string>
    <string name="Search">Search</string>
    <string name="SelectSportsType">Select Sports Type</string>
    <string name="Done">Done</string>
    <string name="NoEventFound">No event found.</string>
    <string name="Please_Select_sports">Please Select Sports Type</string>
    <string name="please_select_location">Please Select Location Type</string>
    <string name="update_profile_str">Update Profile</string>

    <string name="buy_coins">Buy Coins</string>
    <string name="all">All</string>
    <string name="enter_reason_for_report">Enter Reporting Message</string>

    <string-array name="Languages">
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>

    </string-array>

    <string-array name="TicketRequest">
        <item>Current Request</item>
        <item>Accepted Request</item>
        <item>Rejected Request</item>

    </string-array>

    <string-array name="address">
        <item>Akshya Nagar 1st Block 1st Cross, Rammurthy nagar</item>
        <item>39, Girdhari Sadan, N C Kelkar Rd, Nxt To Sena Bhavan, Dadar (west)</item>
        <item>	332 Adarsh Mahal, A, Bassein Road(vasai Road)</item>
        <item>Plot 39, Sector-1, Opp Dy Patil College, Nerul, Navi Mumbai</item>
        <item>Plot 39, Sector-1, Opp Dy Patil College, Nerul, Navi Mumbai</item>
        <item>Plot 39, Sector-1, Opp Dy Patil College, Nerul, Navi Mumbai</item>
        <item>Plot 39, Sector-1, Opp Dy Patil College, Nerul, Navi Mumbai</item>

    </string-array>


    <string-array name="ApplicableGender">
        <item>Select Applicable Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Male/Female</item>
    </string-array>


    <string-array name="Coat">
        <item> 1</item>
        <item> 2</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>

    </string-array>

    <string-array name="countrycode">
        <item>+1</item>
        <item>+91</item>
        <item>+52</item>
    </string-array>
</resources>