<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.parentsApp.TeamDetailsActivity">

    <include
        layout="@layout/topbar_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_main_team_image"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:src="@mipmap/usa" />

                <LinearLayout
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_main_team_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_name"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/green6"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:padding="@dimen/_2sdp"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@mipmap/ball" />

                        <TextView
                            android:id="@+id/tv_main_team_sports"
                            android:layout_width="0dp"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/soccer"
                            android:textColor="@color/grey2"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llLocation"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:padding="@dimen/_2sdp"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@mipmap/loc" />

                        <TextView
                            android:id="@+id/tv_main_team_address"
                            android:layout_width="0dp"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/aspen_colorado_usa"
                            android:textColor="@color/grey2"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llPerson"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:padding="@dimen/_1sdp"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@mipmap/em" />

                        <TextView
                            android:id="@+id/tv_main_team_no.participant"
                            android:layout_width="0dp"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/_150_participants"
                            android:textColor="@color/grey2"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_main_team_coach_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/coach_name"
                        android:textColor="@color/grey2"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_main_team_edit"
                        android:src="@mipmap/create"
                        android:padding="@dimen/_5sdp"
                        android:background="@drawable/circle2"
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"/>

                    <ImageView
                        android:id="@+id/iv_main_team_delete"
                        android:src="@mipmap/delete_icn"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:padding="@dimen/_4sdp"
                        android:background="@drawable/circle2"
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_main_teamdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/lorem_text"
                android:textColor="@color/grey2"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:src="@mipmap/moany"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"/>

                <LinearLayout
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fees"
                        android:textColor="@color/grey2"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:id="@+id/tv_main_team_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20_00"
                        android:textColor="@color/green6"
                        android:textSize="@dimen/_17ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_month"
                        android:textColor="@color/grey2"
                        android:textSize="@dimen/_11ssp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:visibility="visible"
                android:id="@+id/txtJoin"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:text="@string/join"
                style="@style/txtButton1"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/txtParticipant"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:text="@string/participant"
                style="@style/txtButton1"/>

            <TextView
                android:id="@+id/txtExpire"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_ship_expire"
                android:textColor="@color/green6"
                android:textSize="@dimen/_20ssp"
                android:visibility="gone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_main_team_member_expire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_sep_2022"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/grey2"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>