<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.loginRegister.addChildScreen.AddChildActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/topbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:id="@+id/rcvChildList"
            tools:itemCount="2"
            tools:listitem="@layout/item_add_child_list"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtAdd"
            style="@style/txtButton3"
            android:layout_width="@dimen/_120sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/add" />

        <LinearLayout
            android:id="@+id/llAddFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAddAnotherChild"
                style="@style/txtButton2"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/add_another_child" />

            <TextView
                android:id="@+id/txtFinish"
                style="@style/txtButton2"
                android:text="@string/finish" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>